feat: 수업 내 팀원 정보 조회 기능 구현 및 팀 기능 리팩토링